Ajustes na edição de bancas

--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -186,8 +186,9 @@
     {% else %}
       <p>Não existem avisos.</p>
     {% endif %}
+
     <a href="{% url 'cria_aviso' %}">
-      <input type='button' class="cria" value="Cria Aviso">
+      <input type='button' class="cria btn btn-primary" value="Cria Aviso">
     </a>
 
   </form>
