melhor janela para criar bancas

--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -13,7 +13,7 @@
     <hr>
     <h5>Agendamentos</h5>
     <ul>
-        <li><a href="{% url 'bancas_index' %}">Bancas</a></li>
+        <li><a href="{% url 'bancas_lista' 'proximas' %}">Bancas</a></li>
         <li><a href="{% url 'dinamicas_index' %}">Mentorias</a></li>
     </ul>
     
