--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -125,7 +125,13 @@
               {% comment %} color: '#99b9ff' {% endcomment %}
             },
           {% endfor %}
-        ]
+        ],
+
+        dateClick: function(info) {
+          // Para criar uma nova banca, reproveitando a data clicada
+          window.location.href = "{% url 'bancas_criar'%}" + info.dateStr;
+        },
+
       });
 
       calendar.render();
@@ -171,10 +177,6 @@
         font-size: 9px !important;
       }
     }
-
-
-
-
   </style>
 
 {% endblock %}
@@ -186,8 +188,7 @@
   <div class="wrap">
       <div class="one">
         <br><br>
-        <a href="{% url 'bancas_criar'%}"><h5>Agendar Banca</h5></a>
-        <a href="{% url 'bancas_lista' 'proximas' %}"><h5>Listar Bancas</h5></a>
+        <a href="{% url 'bancas_criar'%}"><h5>Criar Nova Banca</h5></a>
       </div>
       <div class="two" id='calendar'></div>
   </div>
