--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -25,6 +25,7 @@
         <li><a href="{% url 'planos_de_orientacao' %}">Planos de Orientação</a></li>
         <li><a href="{% url 'relatos_quinzenais' %}">Relatos Quinzenais</a></li>
         <li><a href="{% url 'avaliacoes_pares' %}">Avaliação de Pares</a></li>
+        <li><a href="{% url 'bancas_index'%}">Agendar Banca</a></li>
     </ul>
 
     <h5>Notas</h5>
