--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -134,7 +134,7 @@
           var elem = document.createElement( "span" );
           $( elem ).data( "url", "{% url 'bancas_editar' %}"+event.event.id);
           abrir_modal.call(elem, null);
-      },
+        },
 
         dateClick: function(info) {
           // Para criar uma nova banca, reproveitando a data clicada
@@ -196,7 +196,7 @@
 
   <span class="titulo">Bancas
     <small>
-      <a data-toggle="tooltip" data-html="true" animation="true" title="Agenda Nova Banca" class="open-banca"
+      <a data-toggle="tooltip" data-html="true" animation="true" title="Agenda Nova Banca" class="open-modal"
             data-url="{% url 'bancas_criar' %}" href="{% url 'bancas_criar'%}"> 
             &#10133;
         </a>
@@ -208,6 +208,6 @@
       <div class="two" id='calendar'></div>
   </div>
 
-  {% include "bancas-modal.html" %}
+  {% include "janelas-modal.html" %}
 
 {% endblock %}
