--- a/administracao/templates/administracao/cadastra_organizacao.html
+++ b/administracao/templates/administracao/cadastra_organizacao.html
@@ -76,7 +76,7 @@
     <textarea id="ramo_atividade" name="ramo_atividade" rows="4" cols="80" maxlength="256">{% if organizacao.ramo_atividade%}{{organizacao.ramo_atividade}}{% endif %}</textarea>
     <br><br>
 
-    <input type="submit" value="{% if edicao %}Atualizar{% else %}Cadastrar{% endif %} Organização Parceira">
+    <input class="btn btn-primary" type="submit" value="{% if edicao %}Atualizar{% else %}Cadastrar{% endif %} Organização Parceira">
     
   </form>
 
