--- a/administracao/templates/administracao/cadastra_disciplina.html
+++ b/administracao/templates/administracao/cadastra_disciplina.html
@@ -26,7 +26,7 @@
   <form method="post" id="disciplinaform" enctype="multipart/form-data"> {% csrf_token %}
     
     <label for="nome">Nome da Disciplina:</label> <input type="text" size="48" style="max-width:100%;display:block"
-           maxlength="{% max_length disciplina "nome" %}" id="nome" name="nome" required>
+           maxlength="{% max_length Disciplina "nome" %}" id="nome" name="nome" required>
     <br>
     <input class="btn btn-primary" type="submit" value="Cadastrar Disciplina">
     
