listando propostas com mais detalhes

--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -39,7 +39,7 @@
         <li><a href="{% url 'organizacoes_lista' %}">Organizações</a></li>
     </ul>
     <ul>
-        <li><a href="{% url 'propostas_apresentadas' %}">Propostas</a></li>
+        <li><a href="{% url 'propostas_lista' %}">Propostas</a></li>
         <li><a href="{% url 'projetos_lista' %}">Projetos</a></li>
     </ul>
 
