--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -35,12 +35,15 @@
   <div class="atualizar">
 
     <table id="EstudantesTable">
+      <thead>
       <tr>
           <th class="text-center">C</th>
           <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Estudante</th>
           <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Curso</th>
           <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">CR</th>
       </tr>
+      </thead>
+      <tbody>
       {% for aluno,opcoes,opcoestemp in alunos_list %} 
         <tr class="item">
           <td class="{% if opcoes.count >= 5 %}text-success{% elif opcoestemp.count >= 5 %}text-warning{% else %}text-danger{% endif %}"> &#x2B24; </td>
@@ -81,6 +84,7 @@
           </td>
         </tr>
       {% endfor %}
+      </tbody>
     </table>
     <br>
     
